--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,9 +5,16 @@ dj-database-url==0.5.0
 Django==3.0
 django-filter==2.2.0
 djangorestframework==3.11.0
+gunicorn==20.0.4
 idna==2.8
+pkg-resources==0.0.0
+psycopg2==2.8.4
+psycopg2-binary==2.8.4
 python-decouple==3.3
 pytz==2019.3
 requests==2.22.0
 sqlparse==0.3.0
+style==1.1.0
+update==0.0.1
 urllib3==1.25.7
+whitenoise==5.0.1
