--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,22 @@
--r requirements-dev.txt
-gunicorn
-psycopg2
+asgiref==3.2.3
+certifi==2019.11.28
+chardet==3.0.4
+dj-database-url==0.5.0
+dj-static==0.0.6
+Django==3.0
+django-filter==2.2.0
+djangorestframework==3.11.0
+gunicorn==20.0.4
+idna==2.8
+pkg-resources==0.0.0
+psycopg2==2.8.4
+psycopg2-binary==2.8.4
+python-decouple==3.3
+pytz==2019.3
+requests==2.22.0
+sqlparse==0.3.0
+static3==0.7.0
+style==1.1.0
+update==0.0.1
+urllib3==1.25.7
+whitenoise==5.0.1
